[package]
name    = "kittui_racer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
crossterm         = "0.26.1"
futures-channel = "0.3.28"
futures-util      = "0.3.28"
pretty_env_logger = "0.4.0"
random_name_generator = "0.3.4"
serde             = { version = "1.0.160", features = [ "derive" ] }
serde_json        = "1.0.96"
tokio             = { version = "1.27.0", features = [ "full" ] }
tokio-stream      = "0.1.12"
tokio-tungstenite = "0.18.0"
tui               = "0.19.0"
unicode-width     = "0.1.10"
url = "2.3.1"
warp              = "0.3.4"
